--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@ant-design/plots": "^2.2.8",
     "@ant-design/pro-components": "^2.7.14",
     "@ant-design/pro-layout": "^7.19.11",
     "antd": "^5.20.0",
